<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/TV_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/titulo_registro"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_nombre_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/nombre_registro"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ET_correo_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/correo_reg"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/ET_contrasena_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/contrasena_reg"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ET_repita_contrasena_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/rep_contrasena"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <Button
            android:id="@+id/BT_enviar_reg"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botonredondo"
            android:text="@string/enviar_reg"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/black" />

    </LinearLayout>
</ScrollView>